--- a/charts/preview/requirements.yaml
+++ b/charts/preview/requirements.yaml
@@ -9,6 +9,10 @@ dependencies:
   repository: http://chartmuseum.jenkins-x.io
   version: 2.3.92
 
+- name: postgresql
+  repository: https://kubernetes-charts.storage.googleapis.com
+  version: 8.6.4
+
   # !! "alias: preview" must be last entry in dependencies array !!
   # !! Place custom dependencies above !!
 - alias: preview
