--- a/rest_django_payments/skaffold.yaml
+++ b/rest_django_payments/skaffold.yaml
@@ -2,7 +2,7 @@ apiVersion: skaffold/v1beta2
 kind: Config
 build:
   artifacts:
-  - image: 819478613413.dkr.ecr.eu-west-1.amazonaws.com/mmontalvo/rest-django-payments
+  - image: vibrant-catbird-275701/rest-django-payments
     context: .
     docker: {}
   tagPolicy:
