--- a/charts/rest-django-payments/templates/service.yaml
+++ b/charts/rest-django-payments/templates/service.yaml
@@ -17,7 +17,7 @@ metadata:
 spec:
   type: {{ .Values.service.type }}
   ports:
-  - port: {{ .Values.service.externalPort }}
+  - port: 8200
     targetPort: {{ .Values.service.internalPort }}
     protocol: TCP
     name: http
