Adding internal port

--- a/charts/rest-django-payments/templates/service.yaml
+++ b/charts/rest-django-payments/templates/service.yaml
@@ -17,10 +17,14 @@ metadata:
 spec:
   type: {{ .Values.service.type }}
   ports:
-  - port: 8200
+  - port: {{ .Values.service.externalPort }}
     targetPort: {{ .Values.service.internalPort }}
     protocol: TCP
     name: http
+  - port: 8200
+    targetPort: {{ .Values.service.internalPort }}
+    protocol: TCP
+    name: http-old
   selector:
     app: {{ template "fullname" . }}
 {{- end }}
