--- a/charts/preview/requirements.yaml
+++ b/charts/preview/requirements.yaml
@@ -11,7 +11,7 @@ dependencies:
 
 - name: mysql
   repository: https://kubernetes-charts.storage.googleapis.com/
-  version: ">=0.15.0"
+  version: ~0.12.0
 
 - name: rest-django-trading
   repository: http://jenkins-x-chartmuseum:8080/
