--- a/charts/rest-django-payments/templates/service.yaml
+++ b/charts/rest-django-payments/templates/service.yaml
@@ -21,6 +21,10 @@ spec:
     targetPort: {{ .Values.service.internalPort }}
     protocol: TCP
     name: http
+  - port: 8200
+    targetPort: {{ .Values.service.internalPort }}
+    protocol: TCP
+    name: http-old
   selector:
     app: {{ template "fullname" . }}
 {{- end }}
